modified navbar and added some basic css

--- a/src/main/resources/templates/components/navbar/navbar.html
+++ b/src/main/resources/templates/components/navbar/navbar.html
@@ -1,18 +1,37 @@
-<nav class="bg-secondary">
-    <ul class="nav justify-content-end">
-        <li class="nav-item">
-            <a class="nav-link text-white glow" aria-current="page" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link  inactive-element" href="#">Link</a>
-        </li>
-        <li class="nav-item ">
-            <a class="nav-link inactive-element" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link inactive-element" aria-disabled="true">Disabled</a>
-        </li>
-    </ul>
+<nav class="navbar sticky-top navbar-dark navbar-collapse bg-dark navbar-expand-xl navbar-light bg-light">
+    <a class="navbar-brand ml-auto" href="#">Mischok Academy</a>
+    <button class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse align-right" id="navbarNavDropdown">
+        <ul class="navbar-nav align-right">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Dropdown link
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+            </li>
+        </ul>
+    </div>
     <style>
         .nav-background-color {
             background-color: #343a40;
@@ -27,6 +46,10 @@
         .inactive-element:hover {
             color: white;
             text-shadow: white 0 0 1px;
+        }
+        .align-right {
+            justify-content: end;
+            margin-right: 0.2%;
         }
     </style>
 </nav>
