--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -5,8 +5,16 @@
     <title>Dashboard</title>
     <link th:replace="~{bootstrap/style.html}">
 </head>
-<body>
+<body class="background-color">
 <nav th:replace="~{components/navbar/navbar.html}"></nav>
+<div>
+
+</div>
 <script th:replace="~{bootstrap/script.html}"></script>
+<style>
+    .background-color {
+        background-color: #343a40;
+    }
+</style>
 </body>
 </html>
