--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,15 +1,203 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Dein Profil</title>
+    <link th:replace="~{bootstrap/style.html}">
 </head>
 <body class="background-color">
 <nav th:replace="~{components/navbar/navbar.html :: navbar (selfUser=${selfUser}, httpServletRequest=${httpServletRequest})}"></nav>
-</body>
+<div class="profile-wrapper">
+    <div class="profile-container">
+        <section class="profile-section">
+            <h1 th:text="|Hallo, ${selfUser.getFirstName()}|"/>
+        </section>
+        <hr>
+        <section class="profile-section">
+            <div class="profile-picture-wrapper">
+                <div class="image-wrapper" data-toggle="tooltip" data-placement="top" title="Profilbild ändern">
+                    <img th:src="@{img/mischok-logo.png}" width="75px" height="75px" alt="Profilbild"
+                         class="profile-picture">
+                </div>
+                <div>
+                    <input type="file" name="file" id="file" class="file-upload-input" accept="image/**"
+                           onchange="uploadProfilePicture(this.files[0])">
+                    <label for="file" class="file-upload-label btn btn-dark" id="file-name">Profil Bild ändern</label>
+                    <div id="uploadButton"></div>
+                </div>
+            </div>
+        </section>
+        <section class="profile-section">
+            <form class="data-section-wrapper" th:action="@{/user/{id}(id=${selfUser.getId()})}" method="post" th:object="${selfUser}">
+                <div class="data-section">
+                    <div class="data data-disabled">
+                        <label class="data-item" for="username">Username</label>
+                        <input id="username" disabled class="data-item-input" th:value="${selfUser.getUsername()}">
+                    </div>
+                    <div class="data">
+                        <label class="data-item" for="firstName">Vorname</label>
+                        <input class="data-item-input" th:value="${selfUser.getFirstName()}" id="firstName" th:field="*{firstName}">
+                    </div>
+                    <div class="data">
+                        <label class="data-item" for="lastName">Nachname</label>
+                        <input class="data-item-input" th:value="${selfUser.getLastName()}" id="lastName" th:field="*{lastName}">
+                    </div>
+                    <div class="data">
+                        <label class="data-item" for="email">Email</label>
+                        <input class="data-item-input" th:value="${selfUser.getEmail()}" id="email">
+                    </div>
+                </div>
+                <button class="mt-2 btn btn-dark">Speichern</button>
+            </form>
+        </section>
+    </div>
+</div>
 <style>
-    .background-color {
-        background-color: #343a40;
+
+    hr {
+        border: none;
+        height: 1px;
+        background-color: #979797;
+        margin: 3px 0;
+        width: 100%;
     }
+
+    input {
+        background-color: #131415;
+        color: white;
+        border: 1px solid transparent;
+        box-shadow: #0c0c0c 0 0 1px;
+        border-radius: 25px;
+        margin: 5px 3px;
+        width: fit-content;
+        padding: 5px;
+        text-align: center  !important;
+    }
+
+        input:focus {
+            border: 1px solid #343a40;
+        }
+        input:disabled {
+            background-color: #222427;
+        }
+
+        .data-section-wrapper {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+        }
+
+        .data-section {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            justify-items: center;
+            flex-wrap: wrap;
+            width: 90%;
+        }
+
+        .data {
+            display: flex;
+            flex-direction: column;
+            justify-items: center;
+            text-align: center;
+        }
+
+        .data-disabled {
+            flex: 1 0 100%;
+            align-items: center;
+        }
+
+        .data-item {
+            text-align: center;
+        }
+
+        .data-item-input {
+            text-align: start;
+        }
+
+        .background-color {
+            background-color: #343a40;
+        }
+
+        .profile-wrapper {
+            display: flex;
+            justify-content: center;
+            align-content: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #343a40;
+        }
+
+        .profile-container {
+            background-color: #2a2d2f;
+            box-shadow: #1d1f20 0 0 10px;
+            height: fit-content;
+            margin: 2%;
+            padding: 30px;
+            color: white;
+            width: 60%;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        .profile-section {
+            margin-bottom: 20px;
+        }
+
+        .profile-picture-wrapper {
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            justify-items: center;
+            align-items: center;
+        }
+
+        .image-wrapper {
+            width: 75px;
+            height: 75px;
+            border-radius: 50%;
+            overflow: hidden;
+            -webkit-user-drag: none;
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+
+        .file-upload-wrapper {
+            position: relative;
+            display: inline-block;
+        }
+
+        .file-upload-input {
+            width: 0.1px;
+            height: 0.1px;
+            opacity: 0;
+            overflow: hidden;
+            position: absolute;
+            z-index: -1;
+        }
+
+        .file-upload-label {
+            display: inline-block;
+            padding: 10px 20px;
+
+            cursor: pointer;
+            border-radius: 5px;
+            font-size: 16px;
+            transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+        }
+
+        .file-upload-label:hover {
+        }
 </style>
+<script th:src="@{/js/navbar.js}"></script>
+<script th:src="@{/js/profile.js}"></script>
+<script th:replace="~{bootstrap/script.html}"></script>
+</body>
 </html>
