added user password change and self user delete

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -10,7 +10,7 @@
 <div class="profile-wrapper">
     <div class="profile-container">
         <section class="profile-section">
-            <h1 th:text="|Hallo, ${selfUser.getFirstName()}|"/>
+            <h1 class="text-success" th:text="|Hallo, ${selfUser.getFirstName()}|"/>
         </section>
         <hr>
         <section class="profile-section">
@@ -28,7 +28,8 @@
             </div>
         </section>
         <section class="profile-section">
-            <form class="data-section-wrapper" th:action="@{/user/{id}(id=${selfUser.getId()})}" method="post" th:object="${selfUser}">
+            <form class="data-section-wrapper" th:action="@{/user/{id}(id=${selfUser.getId()})}" method="post"
+                  th:object="${selfUser}">
                 <div class="data-section">
                     <div class="data data-disabled">
                         <label class="data-item" for="username">Username</label>
@@ -36,11 +37,13 @@
                     </div>
                     <div class="data">
                         <label class="data-item" for="firstName">Vorname</label>
-                        <input class="data-item-input" th:value="${selfUser.getFirstName()}" id="firstName" th:field="*{firstName}">
+                        <input class="data-item-input" th:value="${selfUser.getFirstName()}" id="firstName"
+                               th:field="*{firstName}">
                     </div>
                     <div class="data">
                         <label class="data-item" for="lastName">Nachname</label>
-                        <input class="data-item-input" th:value="${selfUser.getLastName()}" id="lastName" th:field="*{lastName}">
+                        <input class="data-item-input" th:value="${selfUser.getLastName()}" id="lastName"
+                               th:field="*{lastName}">
                     </div>
                     <div class="data">
                         <label class="data-item" for="email">Email</label>
@@ -49,6 +52,47 @@
                 </div>
                 <button class="mt-2 btn btn-dark">Speichern</button>
             </form>
+        </section>
+    </div>
+    <div class="profile-container">
+        <section class="profile-section">
+            <h2 class="text-danger">Account Verwaltung</h2>
+        </section>
+        <hr>
+        <section class="profile-section">
+            <form id="passwordChangeForm" class="data-section-wrapper" th:action="@{/user/password}" method="post"
+                  th:object="${passwordChangeDto}">
+                <div class="data-section">
+                    <div class="data">
+                        <label for="oldPassword">Altes Passwort</label>
+                        <div class="input-wrapper">
+                            <input type="password" id="oldPassword" class="data-item-input password-input"
+                                   placeholder="Altes Passwort" th:field="*{oldPassword}">
+                            <img th:src="@{svg/eye.svg}" class="input-icon" onclick="togglePasswordView('oldPassword')"
+                                 alt="">
+                        </div>
+                    </div>
+                    <div class="data">
+                        <label for="newPassword">Neues Passwort</label>
+                        <div class="input-wrapper">
+                            <input type="password" id="newPassword" class="data-item-input password-input"
+                                   placeholder="Neues Passwort" th:field="*{password}">
+                            <img th:src="@{svg/eye.svg}" class="input-icon" onclick="togglePasswordView('newPassword')"
+                                 alt="">
+                        </div>
+                    </div>
+                </div>
+                <button class="mt-2 btn btn-dark">Passwort ändern</button>
+                <small id="changedPassword" class="text-success password-change-error"
+                       th:if="${passwordChangeAction != null}" th:text="${passwordChangeAction.getMessage()}"
+                       th:classappend="${passwordChangeAction == passwordChanged ? 'text-success' : 'text-danger'}"/>
+            </form>
+            <div class="data-section-wrapper">
+                <button
+                        th:onclick="'deleteAccount(' + ${selfUser.getId()} + ')'"
+                        class="btn btn-danger mt-3">Account Löschen
+                </button>
+            </div>
         </section>
     </div>
 </div>
@@ -71,131 +115,156 @@
         margin: 5px 3px;
         width: fit-content;
         padding: 5px;
-        text-align: center  !important;
+        text-align: center !important;
     }
 
-        input:focus {
-            border: 1px solid #343a40;
-        }
-        input:disabled {
-            background-color: #222427;
-        }
 
-        .data-section-wrapper {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 100%;
-        }
+    input:focus {
+        border: 1px solid #343a40;
+    }
 
-        .data-section {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            justify-items: center;
-            flex-wrap: wrap;
-            width: 90%;
-        }
+    input:disabled {
+        background-color: #222427;
+    }
 
-        .data {
-            display: flex;
-            flex-direction: column;
-            justify-items: center;
-            text-align: center;
-        }
+    .data-section-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
 
-        .data-disabled {
-            flex: 1 0 100%;
-            align-items: center;
-        }
+    .data-section {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        justify-items: center;
+        flex-wrap: wrap;
+        width: 90%;
+    }
 
-        .data-item {
-            text-align: center;
-        }
+    .input-wrapper {
+        position: relative;
+    }
 
-        .data-item-input {
-            text-align: start;
-        }
+    .input-icon {
+        position: absolute;
+        right: 3%;
+        top: 50%;
+        width: 40px;
+        height: 40px;
+        transform: translateY(-50%);
+        cursor: pointer;
+    }
 
-        .background-color {
-            background-color: #343a40;
-        }
+    .password-input {
+        padding-right: 30px;
+    }
 
-        .profile-wrapper {
-            display: flex;
-            justify-content: center;
-            align-content: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #343a40;
-        }
+    .password-change-error {
+    }
 
-        .profile-container {
-            background-color: #2a2d2f;
-            box-shadow: #1d1f20 0 0 10px;
-            height: fit-content;
-            margin: 2%;
-            padding: 30px;
-            color: white;
-            width: 60%;
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-        }
+    .data {
+        display: flex;
+        flex-direction: column;
+        justify-items: center;
+        text-align: center;
+    }
 
-        .profile-section {
-            margin-bottom: 20px;
-        }
+    .data-disabled {
+        flex: 1 0 100%;
+        align-items: center;
+    }
 
-        .profile-picture-wrapper {
-            display: flex;
-            flex-direction: column;
-            align-content: center;
-            justify-items: center;
-            align-items: center;
-        }
+    .data-item {
+        text-align: center;
+    }
 
-        .image-wrapper {
-            width: 95px;
-            height: 95px;
-            border-radius: 50%;
-            overflow: hidden;
-            -webkit-user-drag: none;
-            -webkit-touch-callout: none;
-            -webkit-user-select: none;
-            -khtml-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-            margin: 10px;
-        }
+    .data-item-input {
+        text-align: start;
+    }
 
-        .file-upload-wrapper {
-            position: relative;
-            display: inline-block;
-        }
+    .background-color {
+        background-color: #343a40;
+    }
 
-        .file-upload-input {
-            width: 0.1px;
-            height: 0.1px;
-            opacity: 0;
-            overflow: hidden;
-            position: absolute;
-            z-index: -1;
-        }
+    .profile-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        align-content: center;
+        height: 100vh;
+        margin: 0;
+        background-color: #343a40;
+        padding-top: 1.5%;
+    }
 
-        .file-upload-label {
-            display: inline-block;
-            padding: 10px 20px;
+    .profile-container {
+        background-color: #2a2d2f;
+        box-shadow: #1d1f20 0 0 10px;
+        height: fit-content;
+        margin: 0.5%;
+        padding: 30px;
+        color: white;
+        width: 60%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
 
-            cursor: pointer;
-            border-radius: 5px;
-            font-size: 16px;
-            transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
-        }
+    .profile-section {
+        margin-bottom: 20px;
+    }
 
-        .file-upload-label:hover {
-        }
+    .profile-picture-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        justify-items: center;
+        align-items: center;
+    }
+
+    .image-wrapper {
+        width: 95px;
+        height: 95px;
+        border-radius: 50%;
+        overflow: hidden;
+        -webkit-user-drag: none;
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        margin: 10px;
+    }
+
+    .file-upload-wrapper {
+        position: relative;
+        display: inline-block;
+    }
+
+    .file-upload-input {
+        width: 0.1px;
+        height: 0.1px;
+        opacity: 0;
+        overflow: hidden;
+        position: absolute;
+        z-index: -1;
+    }
+
+    .file-upload-label {
+        display: inline-block;
+        padding: 10px 20px;
+
+        cursor: pointer;
+        border-radius: 5px;
+        font-size: 16px;
+        transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+    }
+
+    .file-upload-label:hover {
+    }
 </style>
 <script th:src="@{/js/navbar.js}"></script>
 <script th:replace="~{bootstrap/script.html}"></script>
