--- a/src/main/resources/templates/components/navbar/navbar.html
+++ b/src/main/resources/templates/components/navbar/navbar.html
@@ -27,7 +27,7 @@
             <li sec:authorize="hasAuthority('ADMIN')"
                 class="nav-item"
                 th:classappend="${httpServletRequest.getRequestURI() == '/users'} ? 'active-element' : 'inactive-element'">
-                <a class="nav-link" href="#">Benutzerverwaltung</a>
+                <a class="nav-link" href="user/benutzerverwaltung">Benutzerverwaltung</a>
             </li>
             <!-- Section for Students -->
             <li sec:authorize="hasAuthority('STUDENT')"
