--- a/src/main/resources/templates/components/navbar/navbar.html
+++ b/src/main/resources/templates/components/navbar/navbar.html
@@ -29,11 +29,16 @@
                 th:classappend="${httpServletRequest.getRequestURI() == '/users'} ? 'active-element' : 'inactive-element'">
                 <a class="nav-link" href="#">Benutzerverwaltung</a>
             </li>
+            <li sec:authorize="hasAuthority('ADMIN')"
+                class="nav-item"
+                th:classappend="${httpServletRequest.getRequestURI() == '/subjects'} ? 'active-element' : 'inactive-element'">
+                <a class="nav-link" href="/subjects">Fächer & Themen</a>
+            </li>
             <!-- Section for Students -->
             <li sec:authorize="hasAnyAuthority('STUDENT', 'ADMIN')"
                 class="nav-item"
-                th:classappend="${httpServletRequest.getRequestURI() == '/journal'} ? 'active-element' : 'inavtive-element'">
-                <a class="nav-link" th:href="${httpServletRequest.getRequestURI() != '/journal' ? '/journal' : '#'}">Journal</a>
+                th:classappend="${httpServletRequest.getRequestURI() == '/journals'} ? 'active-element' : 'inavtive-element'">
+                <a class="nav-link" th:href="${httpServletRequest.getRequestURI() != '/journals' ? '/journals' : '#'}">Journal</a>
             </li>
             <!-- Section for Teachers -->
             <li sec:authorize="hasAuthority('TEACHER')"
