--- a/src/main/resources/templates/classes.html
+++ b/src/main/resources/templates/classes.html
@@ -4,14 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Klassen</title>
-    <link th:replace="~{bootstrap/style.html}">
-    <form method="post" th:action="@{/classrooms}" th:object="${newClass}">
-        <input id="name" placeholder="Enter Name" required type="text" th:field="*{name}"/>
-        <input id="longDescription" placeholder="Enter long Description" required type="text" th:field="*{longDescription}"/>
-        <input id="shortDescription" placeholder="Enter short Description" required type="text" th:field="*{shortDescription}"/>
-        </div>
-        <input type="submit" value="Create User">
-    </form>
+    <link th:replace="~{bootstrap/style.html}"/>
+
 </head>
 <body class="background-color">
 <script th:replace="~{bootstrap/script.html}"></script>
@@ -56,6 +50,14 @@
 
 
 </style>
+<div>
+<form method="post" th:action="@{/classrooms}" th:object="${newClass}">
+    <input id="name" placeholder="Enter Name" required type="text" th:field="*{name}"/>
+    <input id="longDescription" placeholder="Enter long Description" required type="text" th:field="*{longDescription}"/>
+    <input id="shortDescription" placeholder="Enter short Description" required type="text" th:field="*{shortDescription}"/>
+    <input type="submit" value="Create User">
+</form>
+</div>
 
 <p th:if="${createClass != null}" style="color:#ffff;">Klasse hinzugefügt</p>
 <br><br>
@@ -66,34 +68,15 @@
         <thead>
         <tr>
             <th scope="col">ID</th>
-            <th scope="col">Klassen</th>
-            <th scope="col">Anzahl Schüler</th>
+            <th scope="col">Klasse</th>
+            <th scope="col">kurz Beschreibung</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="class: ${classes}">
-            <th scope="row" th:text="${class.getName()}">F4</th>
-            <td th:href="@{/classrooms/{id} (id=class.id)}}">Systemintegration</td>
-            <td>13</td>
-        </tr>
-        <tr th:each="class: ${classes}">
-            <th scope="row" th:text="${class.name}">A4</th>
-            <td th:href="@{/classrooms/{id} (id=${class.id})}">Anwendungsentwicklung</td>
-            <td>14</td>
-        </tr>
-        <tr>
-            <th>sdf</th>
-        </tr>
-
-        <tr>
-            <th scope="row">F3</th>
-            <td>Systemintegration</td>
-            <td>10</td>
-        </tr>
-        <tr>
-            <th scope="row">A3</th>
-            <td>Anwendungsentwicklung</td>
-            <td>11</td>
+            <td th:text="${class.id}"></td>
+            <td th:text="${class.name}"></td>
+            <td th:text="${class.shortDescription}"></td>
         </tr>
 
         </tbody>
