Weiterleitung von edit-user und user-roles

--- a/src/main/resources/templates/edit-user.html
+++ b/src/main/resources/templates/edit-user.html
@@ -38,6 +38,6 @@
         </div>
     </form>
     </section>
-<a class="btn btn-primary" th:href="@{/user/benutzerverwaltung/rollen/{id}(id=${userId})}">Benutzerrollen bearbeiten</a>
+<a class="btn btn-primary" th:href="@{/user/benutzerverwaltung/rollen/{id}(id=${user.id})}">Benutzerrollen bearbeiten</a>
 </body>
 </html>
