--- a/src/main/resources/templates/user-roles.html
+++ b/src/main/resources/templates/user-roles.html
@@ -48,6 +48,6 @@
     </tr>
     </tbody>
 </table>
-<a class="btn btn-secondary" th:href="@{/user/edit/{id}(id=${userId})}">Zurück zur Bearbeitung</a>
+<a class="btn btn-secondary" th:href="@{/user/edit/{id}(id=${user.id})}">Zurück zur Bearbeitung</a>
 </body>
 </html>
