--- a/src/main/resources/templates/edit-user.html
+++ b/src/main/resources/templates/edit-user.html
@@ -4,40 +4,82 @@
     <meta charset="UTF-8">
     <title>Edit User</title>
     <link th:replace="~{bootstrap/style.html}"></link>
-</head>
-<body class="background-color">
-<nav th:replace="~{components/navbar/navbar.html :: navbar (user=${user}, httpServletRequest=${httpServletRequest})}"></nav>
-<div class="heading-style">
-    <h1>User bearbeiten</h1>
-</div>
-<section class="profile-section">
-    <form class="data-section-wrapper" th:action="@{/user/edit/{id}(id=${user.getId()})}" method="post"
-          th:object="${user}">
-        <div class="data-section">
-            <div class="data">
-                <label class="data-item" for="username">Username</label>
-                <input class="data-item-input" th:value="${user.getUsername()}" id="username"
-                       th:field="*{username}">
-            </div>
-            <div class="data">
-                <label class="data-item" for="firstName">Vorname</label>
-                <input class="data-item-input" th:value="${user.getFirstName()}" id="firstName"
-                       th:field="*{firstName}">
-            </div>
-            <div class="data">
-                <label class="data-item" for="lastName">Nachname</label>
-                <input class="data-item-input" th:value="${user.getLastName()}" id="lastName"
-                       th:field="*{lastName}">
-            </div>
-            <div class="data">
-                <label class="data-item" for="email">Email</label>
-                <input class="data-item-input" th:value="${user.getEmail()}" id="email">
-            </div>
-                </div>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
+            padding: 20px;
+        }
 
-        </div>
-    </form>
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        .heading-style {
+            font-size: 32px;
+            font-weight: bold;
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        .form-section {
+            background-color: #fff;
+            border: 1px solid #ccc;
+            padding: 20px;
+            border-radius: 5px;
+        }
+
+        .data-item {
+            display: block;
+            margin-bottom: 10px;
+        }
+
+        .button {
+            text-align: center;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+<nav th:replace="~{components/navbar/navbar.html :: navbar (user=${user}, httpServletRequest=${httpServletRequest})}"></nav>
+<div class="container">
+    <div class="heading-style">
+        <h1>User bearbeiten</h1>
+    </div>
+    <section class="form-section">
+        <form th:action="@{/user/edit/{id}?oldPath=user/benutzerverwaltung(id=${user.getId()})}" method="post" th:object="${user}">
+            <div class="data-section">
+                <div class="data">
+                    <label class="data-item" for="username">Username</label>
+                    <input class="data-item-input" th:value="${user.getUsername()}" id="username"
+                           th:field="*{username}">
+                </div>
+                <div class="data">
+                    <label class="data-item" for="firstName">Vorname</label>
+                    <input class="data-item-input" th:value="${user.getFirstName()}" id="firstName"
+                           th:field="*{firstName}">
+                </div>
+                <div class="data">
+                    <label class="data-item" for="lastName">Nachname</label>
+                    <input class="data-item-input" th:value="${user.getLastName()}" id="lastName"
+                           th:field="*{lastName}">
+                </div>
+                <div class="data">
+                    <label class="data-item" for="email">Email</label>
+                    <input class="data-item-input" th:value="${user.getEmail()}" id="email"
+                           th:field="*{email}">
+                </div>
+            </div>
+            <button type="submit" class="btn btn-success">Speichern</button>
+        </form>
     </section>
-<a class="btn btn-primary" th:href="@{/user/benutzerverwaltung/rollen/{id}(id=${user.id})}">Benutzerrollen bearbeiten</a>
+    <div class="button">
+        <a class="btn btn-primary" th:href="@{/user/benutzerverwaltung/rollen/{id}(id=${user.id})}">Benutzerrollen bearbeiten</a>
+    </div>
+</div>
 </body>
 </html>
+
+
+
